--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,18 +1,11 @@
 target_sources(sph 
     PRIVATE 
         Camera.cpp
-        Camera.h
-        Core.h
         Geometry.cpp
-        Geometry.h
-        Particle.cpp
-        Particle.h
         Shader.cpp
-        Shader.h
         SPHSystem.cpp
-        SPHSystem.h
+        sph.cpp
         Tester.cpp
-        Tester.h
 )
 
 add_subdirectory(imgui)
