Add option to run on GPU using CUDA

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(sph
     PRIVATE 
         Camera.cpp
         Geometry.cpp
+        neighborTable.cpp
         Shader.cpp
         SPHSystem.cpp
         sph.cpp
@@ -9,3 +10,4 @@ target_sources(sph
 )
 
 add_subdirectory(imgui)
+add_subdirectory(kernels)
